Nästan klar med första sidan
Ska bara lägga till a taggen

--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ElvisSupplements</title>
 </head>
+
 <body>
-    
+
+<header id="title"><h1>What are you looking for?</h1></header>
+<nav id="pwo"><h2>PWO</h2></nav>
+<nav id="protein"><h2>PROTEIN</h2></nav>
+<nav id="creatine"><h2>CREATINE</h2></nav>
+<footer id="logo"><img src="img/logo-removebg-preview.png" alt="Logo"></footer>
+
+
+<link rel="stylesheet" href="css/style.css">
+
+
+
 </body>
 </html>
