Klar med första sidan

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 
 <header id="title"><h1>What are you looking for?</h1></header>
-<nav id="pwo"><h2>PWO</h2></nav>
-<nav id="protein"><h2>PROTEIN</h2></nav>
-<nav id="creatine"><h2>CREATINE</h2></nav>
+<nav id="pwo"><h2><a href="pwo.html">PWO</a></h2></nav>
+<nav id="protein"><h2><a href="protein.html">PROTEIN</a></h2></nav>
+<nav id="creatine"><h2><a href="creatine.html">CREATINE</a></h2></nav>
 <footer id="logo"><img src="img/logo-removebg-preview.png" alt="Logo"></footer>
 
 
