--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <nav id="pwo"><h2><a href="pwo.html">PWO</a></h2></nav>
 <nav id="protein"><h2><a href="protein.html">PROTEIN</a></h2></nav>
 <nav id="creatine"><h2><a href="creatine.html">CREATINE</a></h2></nav>
-<footer id="logo"><img src="img/logo-removebg-preview.png" alt="Logo"></footer>
+<footer id="logo"><img src="img/logo.png" alt="Logo"></footer>
 
 
 <link rel="stylesheet" href="css/style.css">
