Börjat fixa produktsida

--- a/pwo.html
+++ b/pwo.html
@@ -10,21 +10,26 @@
 <header><h1>PRE-WORKOUT</h1></header>
 
 <section>
+<a href="/PwoProductPage/thunderboost.html">
 <img src="img/pwo1.png" alt="pwo">
-<h2>THUNDER BOOST PWO (1G CAFFEINE)</h2>
+</a>
+<a href="/PwoProductPage/thunderboost.html">
+<h2>THUNDER BOOST PWO - 499kr</h2>
+</a>
 </section>
 
 <section>
 <img src="img/pwo2.png" alt="pwo">
-<h2>MEET JESUS PWO (3G CAFFEINE)</h2>
+<h2>MEET JESUS PWO - 599kr</h2>
 </section>
 
 <section>
 <img src="img/pwo3.png" alt="pwo">
-<h2>PUMP PWO</h2>
+<h2>VEIN SHREDDER PWO - 399kr </h2>
+
 </section>
 
-<link rel="stylesheet" href="css/style2.css">
+<link rel="stylesheet" href="css/pwostart.css">
 
 </body>
 </html>
