--- a/pwo.html
+++ b/pwo.html
@@ -19,8 +19,12 @@
 </section>
 
 <section>
+<a href="/PwoProductPage/meetjesus.html">
 <img src="img/pwo2.png" alt="pwo">
+</a>
+<a href="/PwoProductPage/meetjesus.html">
 <h2>MEET JESUS PWO - 599kr</h2>
+</a>
 </section>
 
 <section>
