Gjort sista sidan för första kategorien

--- a/pwo.html
+++ b/pwo.html
@@ -28,8 +28,12 @@
 </section>
 
 <section>
+<a href="/PwoProductPage/veinshredder.html">
 <img src="img/pwo3.png" alt="pwo">
-<h2>VEIN SHREDDER PWO - 399kr </h2>
+</a>
+<a href="/PwoProductPage/veinshredder.html">
+<h2>VEIN SHREDDER PWO - 399kr</h2>
+</a>
 
 </section>
 
