--- a/PwoProductPage/veinshredder.html
+++ b/PwoProductPage/veinshredder.html
@@ -20,7 +20,7 @@
     
     <h1>Flavour: Sour Skulls</h1>
     <h2>399kr</h2>
-    <h3>Ingredients:</h3>
+    <h3>Ingredients (Per Serving):</h3>
     <li>Glycerol - 20000mg</li>
     <li>L-Citrulline - 11000mg</li>
     <li>L-Arginine - 6000mg</li>
