--- a/ProteinProductPage/normalprotein.html
+++ b/ProteinProductPage/normalprotein.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testo Protein</title>
+    <title>Whey Protein</title>
 </head>
 <body>
     
