--- a/ProteinProductPage/vegprotein.html
+++ b/ProteinProductPage/vegprotein.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testo Protein</title>
+    <title>Veg Protein</title>
 </head>
 <body>
     
